# dauda

./: .gitignore  README.md  pyproject.toml
backend/app/: auth.py  auth_routes.py  config.py  conflicts.py  database.py  dependencies.py  ics.py  main.py  models.py  routers.py  schemas.py  workers.py
backend/app/frontend/: manifest.json  service-worker.js
backend/app/frontend/static/css/: styles.css
backend/app/frontend/static/js/: app.js
backend/app/frontend/templates/: index.html
backend/fastapi/: __init__.py  responses.py  testclient.py
backend/pydantic/: __init__.py
backend/pydantic_settings/: __init__.py
backend/tests/: test_events.py
