[tool.poetry]
name = "dauda"
version = "0.1.0"
description = "Mini channel manager MVP backend"
authors = ["Auto Generated <auto@example.com>"]
packages = [{ include = "app", from = "backend" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
pydantic = "^2.6.3"
uvicorn = { extras = ["standard"], version = "^0.28.0" }
sqlalchemy = "^2.0.28"
psycopg = { extras = ["binary"], version = "^3.1.18" }
python-ical = "^0.9.9"
pydantic-settings = "^2.2.1"
httpx = "^0.27.0"
python-dateutil = "^2.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["backend"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
